--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FA2929</color>
+    <color name="hint_color">#636363</color>
+    <color name="text_color">#101010</color>
 </resources>
