--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -8,4 +8,17 @@
 		<attr name="char_representation" format="string" />
 		<attr name="keep_hint" format="boolean" />
 	</declare-styleable>
+
+	<declare-styleable name="AppToolbarView">
+		<attr name="title" format="string" />
+		<attr name="rightButton" format="string" />
+		<attr name="navIcon" format="reference" />
+		<attr name="themeType" format="enum">
+			<enum name="light" value="0" />
+			<enum name="dark" value="1" />
+			<enum name="liteCross" value="2" />
+			<enum name="gold" value="3" />
+			<enum name="withOutBack" value="4" />
+		</attr>
+	</declare-styleable>
 </resources>
