--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,7 @@
     <color name="red">#FA2929</color>
     <color name="hint_color">#636363</color>
     <color name="text_color">#101010</color>
+    <color name="onboard_gradient_start">#968756</color>
+    <color name="black_disable">#61000000</color>
+
 </resources>
