--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="CrownToolbarDefault"></style>
+<!--    <style name="CrownToolbarDefault"></style>-->
 </resources>
