--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <resources>
     <!-- Base application theme. -->
     <style name="Theme.MyBuilding" parent="Theme.MaterialComponents.DayNight.NoActionBar.Bridge">
-<!--    <style name="Theme.MyBuilding" parent="Theme.MaterialComponents.DayNight.DarkActionBar">-->
+        <!--    <style name="Theme.MyBuilding" parent="Theme.MaterialComponents.DayNight.DarkActionBar">-->
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -11,7 +11,7 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
     <!--    @color/pin_reset_color_hint-->
@@ -31,7 +31,7 @@
         <item name="errorIconTint">@color/red</item>
         <item name="boxStrokeErrorColor">@color/red</item>
     </style>
-<!--        <item name="android:textColorHint">@color/</item>-->
+    <!--        <item name="android:textColorHint">@color/</item>-->
 
     <style name="Caption_base">
         <item name="android:textSize">14sp</item>
@@ -48,21 +48,27 @@
         <item name="android:textColorHint">@color/red</item>
     </style>
 
-    <style name="Subtitle1_base">
+    <style name="Subtitle_base">
         <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/text_color</item>
         <item name="lineHeight">16sp</item>
         <item name="android:letterSpacing">0.0</item>
         <item name="android:fontFamily">sans-serif</item>
     </style>
 
-    <style name="InputEditTextAppearance" parent="Subtitle1_base">
-        <item name="android:textColor">@color/text_color</item>
-        <item name="android:maxLength">30</item>
+    <style name="Subtitle1_base" parent="Subtitle_base">
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="Subtitle2_base" parent="Subtitle_base">
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="InputEditTextAppearance" parent="Subtitle_base">
         <item name="android:textColorHint">@color/hint_color</item>
         <item name="android:backgroundTint">@null</item>
         <item name="android:textCursorDrawable">@drawable/bg_gold</item>
     </style>
-
 
     <style name="CrownToolbarDefault" parent="Theme.MyBuilding">
         <!--        <item name="android:theme">?attr/actionBarTheme</item>-->
