--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -41,7 +41,7 @@
     </style>
 
     <style name="HintTextAppearance" parent="Caption_base">
-        <item name="android:textColor">@color/text_color</item>
+        <item name="android:textColor">@color/text_body</item>
     </style>
 
     <style name="TextAppearanceError" parent="Caption_base">
@@ -50,10 +50,10 @@
 
     <style name="Subtitle_base">
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/text_color</item>
+        <item name="android:textColor">@color/text_high</item>
         <item name="lineHeight">16sp</item>
         <item name="android:letterSpacing">0.0</item>
-        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
     </style>
 
     <style name="Subtitle1_base" parent="Subtitle_base">
@@ -62,6 +62,13 @@
 
     <style name="Subtitle2_base" parent="Subtitle_base">
         <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="Body_base">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/text_body</item>
+        <item name="android:letterSpacing">0.0</item>
+        <item name="android:fontFamily">sans-serif</item>
     </style>
 
     <style name="InputEditTextAppearance" parent="Subtitle_base">
