--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -29,7 +29,8 @@
         android:label="FolderPreviewFragment">
 
         <argument
-            android:name="folderName"
+            android:name="pathName"
+            android:defaultValue="false"
             app:argType="string" />
 
     </fragment>
