added data source

--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -30,7 +30,7 @@
 
         <argument
             android:name="pathName"
-            android:defaultValue="false"
+            android:defaultValue=""
             app:argType="string" />
 
     </fragment>
