--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -12,7 +12,7 @@
     <!--        app:popExitAnim="@anim/slide_out_right" />-->
     <fragment
         android:id="@+id/mainFragment"
-        android:name="com.greybot.mybuilding.present.explore.ExploreFragment"
+        android:name="com.greybot.mycosts.present.explore.ExploreFragment"
         android:label="MainFragment" />
 
     <action
@@ -25,7 +25,7 @@
 
     <fragment
         android:id="@+id/folderPreviewFragment"
-        android:name="com.greybot.mybuilding.present.folder.preview.FolderPreviewFragment"
+        android:name="com.greybot.mycosts.present.folder.preview.FolderPreviewFragment"
         android:label="FolderPreviewFragment">
 
         <argument
