fix explore filtering

--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -49,7 +49,7 @@
         android:label="FolderAddFragment">
 
         <argument
-            android:name="nameFolder"
+            android:name="path"
             android:defaultValue="@null"
             app:argType="string"
             app:nullable="true" />
