--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -55,4 +55,25 @@
             app:nullable="true" />
     </fragment>
 
+
+    <action
+        android:id="@+id/toRowAddFragment"
+        app:destination="@+id/RowAddFragment"
+        app:enterAnim="@anim/slide_in_right"
+        app:exitAnim="@anim/slide_out_left"
+        app:popEnterAnim="@anim/slide_in_left"
+        app:popExitAnim="@anim/slide_out_right" />
+
+    <fragment
+        android:id="@+id/RowAddFragment"
+        android:name="com.greybot.mycosts.present.file.add.RowAddFragment"
+        android:label="RowAddFragment">
+
+        <argument
+            android:name="path"
+            android:defaultValue=""
+            app:argType="string"
+            app:nullable="false" />
+    </fragment>
+
 </navigation>
