--- a/app/src/main/res/layout/row_edit_fragment.xml
+++ b/app/src/main/res/layout/row_edit_fragment.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <EditText
-        android:id="@+id/editFileName"
+        android:id="@+id/editRowName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
