--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -51,15 +51,15 @@
     <style name="H6_base">
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">@color/text_high</item>
-        <item name="lineHeight">16sp</item>
-        <item name="android:letterSpacing">0.15</item>
+<!--        <item name="lineHeight">2sp</item>-->
+        <item name="android:letterSpacing">0.0</item>
         <item name="android:fontFamily">sans-serif-medium</item>
     </style>
 
     <style name="Subtitle_base">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/text_high</item>
-        <item name="lineHeight">16sp</item>
+<!--        <item name="lineHeight">2sp</item>-->
         <item name="android:letterSpacing">0.0</item>
 
     </style>
