--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
 
         <TextView
             android:id="@+id/activityProgressBarText"
-            style="@style/Subtitle1_base"
+            style="@style/Subtitle1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
