--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -64,13 +64,13 @@
 
     </style>
 
-    <style name="Subtitle1_base" parent="Subtitle_base">
+    <style name="Subtitle1" parent="Subtitle_base">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/text_high</item>
         <item name="android:fontFamily">sans-serif</item>
     </style>
 
-    <style name="Subtitle2_base" parent="Subtitle_base">
+    <style name="Subtitle2" parent="Subtitle_base">
         <item name="android:textSize">14sp</item>
         <item name="android:fontFamily">sans-serif-medium</item>
     </style>
