--- a/app/src/main/res/layout/explore_fragment.xml
+++ b/app/src/main/res/layout/explore_fragment.xml
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="36dp"
         android:layout_marginBottom="36dp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:icon="@android:drawable/ic_input_add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
