--- a/app/src/main/res/layout/explore_fragment.xml
+++ b/app/src/main/res/layout/explore_fragment.xml
@@ -27,9 +27,9 @@
         android:id="@+id/exploreFloatButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="36dp"
-        android:layout_marginBottom="36dp"
-        android:visibility="gone"
+        android:layout_marginEnd="@dimen/fab_margin"
+        android:layout_marginBottom="@dimen/fab_margin"
+        android:visibility="visible"
         app:icon="@android:drawable/ic_input_add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
