--- a/app/src/main/res/layout/folder_preview_fragment.xml
+++ b/app/src/main/res/layout/folder_preview_fragment.xml
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="36dp"
         android:layout_marginBottom="36dp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:icon="@android:drawable/ic_input_add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
