--- a/app/src/main/res/layout/row_adapter_item.xml
+++ b/app/src/main/res/layout/row_adapter_item.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="16dp"
+    android:layout_marginStart="8dp"
     android:layout_marginTop="8dp"
-    android:layout_marginEnd="16dp">
+    android:layout_marginEnd="8dp">
 
     <androidx.appcompat.widget.AppCompatCheckBox
         android:id="@+id/rowItemCheckDone"
@@ -21,7 +21,6 @@
         style="@style/Subtitle1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
         android:layout_marginEnd="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/rowItem_body"
@@ -34,16 +33,15 @@
 
     <TextView
         android:id="@+id/rowItem_body"
-        style="@style/Subtitle1"
+        style="@style/Body_base"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="4dp"
-        android:gravity="end"
+        android:gravity="end|bottom"
         app:layout_constraintBottom_toBottomOf="@+id/rowItem_Title"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/rowItem_Title"
         app:layout_constraintTop_toTopOf="@+id/rowItem_Title"
-        app:layout_constraintWidth_percent="0.3"
+        app:layout_constraintWidth_percent="0.2"
         tools:text="Text" />
 </androidx.constraintlayout.widget.ConstraintLayout>
