added app coordinator

--- a/app/src/main/res/layout/action_bar_custom_new.xml
+++ b/app/src/main/res/layout/action_bar_custom_new.xml
@@ -15,7 +15,7 @@
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/crownToolbar"
-            style="@style/CrownToolbarDefault"
+            style="@style/AppToolbarDefault"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:contentInsetStart="40dp"
