--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -88,12 +88,23 @@
         <item name="android:textCursorDrawable">@drawable/bg_gold</item>
     </style>
 
-    <style name="CrownToolbarDefault" parent="Theme.MyBuilding">
+    <style name="AppToolbarDefault" parent="Theme.MyBuilding">
         <!--        <item name="android:theme">?attr/actionBarTheme</item>-->
         <item name="android:minHeight">?attr/actionBarSize</item>
         <item name="contentInsetStartWithNavigation">0dp</item>
         <!--        <item name="android:textAppearance">@style/H6_high</item>-->
         <!--        <item name="titleTextColor">@color/__text_high</item>-->
         <item name="android:fitsSystemWindows">false</item>
+    </style>
+
+    <style name="TextInputEditTextDefault" parent="Widget.MaterialComponents.TextInputEditText.OutlinedBox">
+<!--        <item name="android:minHeight">?attr/actionBarSize</item>-->
+<!--        <item name="contentInsetStartWithNavigation">0dp</item>-->
+<!--        <item name="android:fitsSystemWindows">false</item>-->
+    </style>
+    <style name="InputLayoutDefault" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+<!--        <item name="android:minHeight">?attr/actionBarSize</item>-->
+<!--        <item name="contentInsetStartWithNavigation">0dp</item>-->
+<!--        <item name="android:fitsSystemWindows">false</item>-->
     </style>
 </resources>
