--- a/app/src/main/res/layout/folder_add_fragment.xml
+++ b/app/src/main/res/layout/folder_add_fragment.xml
@@ -33,7 +33,7 @@
         android:layout_height="1dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="4dp"
-        android:background="@color/black_grey"
+        android:background="@color/divider_color"
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0"
