--- a/app/src/main/res/layout/total_adapter_item.xml
+++ b/app/src/main/res/layout/total_adapter_item.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginBottom="4dp"
-        android:background="@color/black_grey"
+        android:background="@color/divider_color"
         app:layout_constraintBottom_toTopOf="@+id/totalItemTitle" />
 
     <TextView
@@ -49,7 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="4dp"
-        android:background="@color/black_grey"
+        android:background="@color/divider_color"
         app:layout_constraintTop_toBottomOf="@+id/totalItemTitle" />
     <!--        app:layout_constraintStart_toEndOf="@+id/rowItem_Title"-->
 </androidx.constraintlayout.widget.ConstraintLayout>
