--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -92,6 +92,11 @@
             android:defaultValue=""
             app:argType="string"
             app:nullable="false" />
+        <argument
+            android:name="objectId"
+            android:defaultValue=""
+            app:argType="string"
+            app:nullable="false" />
     </fragment>
 
     <action
