--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -84,7 +84,7 @@
 
     <fragment
         android:id="@+id/RowAddFragment"
-        android:name="com.greybot.mycosts.present.file.add.RowAddFragment"
+        android:name="com.greybot.mycosts.present.row.add.RowAddFragment"
         android:label="RowAddFragment">
 
         <argument
@@ -109,7 +109,7 @@
 
     <fragment
         android:id="@+id/RowEditFragment"
-        android:name="com.greybot.mycosts.present.file.edit.RowEditFragment"
+        android:name="com.greybot.mycosts.present.row.edit.RowEditFragment"
         android:label="RowEditFragment" >
 
         <argument
