--- a/app/src/main/res/layout/row_edit_fragment.xml
+++ b/app/src/main/res/layout/row_edit_fragment.xml
@@ -4,16 +4,29 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <EditText
-        android:id="@+id/editRowName"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/editRowNameLayout"
+        style="@style/InputLayoutDefault"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:hint="File name"
+        android:layout_marginEnd="16dp"
+        android:hint="Row name"
+        android:imeOptions="actionDone"
+        android:inputType="textVisiblePassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.6" />
+        app:layout_constraintWidth_percent="0.9" >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editRowName"
+            style="@style/TextInputEditTextDefault"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:imeOptions="actionDone"
+            android:inputType="textVisiblePassword" />
+    </com.google.android.material.textfield.TextInputLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
