--- a/app/src/main/res/layout/folder_preview_fragment.xml
+++ b/app/src/main/res/layout/folder_preview_fragment.xml
@@ -29,8 +29,8 @@
         android:id="@+id/folderPreviewFloatButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="36dp"
-        android:layout_marginBottom="36dp"
+        android:layout_marginEnd="@dimen/fab_margin"
+        android:layout_marginBottom="@dimen/fab_margin"
         android:visibility="gone"
         app:icon="@android:drawable/ic_input_add"
         app:layout_constraintBottom_toBottomOf="parent"
