--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -133,4 +133,17 @@
             app:nullable="false" />
     </fragment>
 
+    <action
+        android:id="@+id/toExploreAddRootFragment"
+        app:destination="@+id/ExploreAddRootFragment"
+        app:enterAnim="@anim/slide_in_right"
+        app:exitAnim="@anim/slide_out_left"
+        app:popEnterAnim="@anim/slide_in_left"
+        app:popExitAnim="@anim/slide_out_right" />
+
+    <fragment
+        android:id="@+id/ExploreAddRootFragment"
+        android:name="com.greybot.mycosts.present.main.add.ExploreAddRootFragment"
+        android:label="ExploreAddRootFragment" />
+
 </navigation>
