--- a/app/src/main/res/layout/row_add_fragment.xml
+++ b/app/src/main/res/layout/row_add_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
+    <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/addRowButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -12,6 +12,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
         android:text="save"
+        android:src="@drawable/ic_file_done"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1"
         app:layout_constraintTop_toTopOf="parent" />
