--- a/app/src/main/res/layout/row_adapter_item.xml
+++ b/app/src/main/res/layout/row_adapter_item.xml
@@ -22,13 +22,28 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="4dp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/row_item_price"
+        app:layout_constraintEnd_toStartOf="@+id/row_item_count"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toEndOf="@+id/rowItemCheckDone"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.5"
+        tools:text="Text" />
+
+    <TextView
+        android:id="@+id/row_item_count"
+        style="@style/Body_base"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="4dp"
+        android:gravity="end|bottom"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/row_item_name"
+        app:layout_constraintStart_toEndOf="@+id/row_item_name"
+        app:layout_constraintTop_toTopOf="@+id/row_item_name"
+        app:layout_constraintWidth_percent="0.1"
         tools:text="Text" />
 
     <TextView
@@ -38,9 +53,10 @@
         android:layout_height="0dp"
         android:layout_marginStart="4dp"
         android:gravity="end|bottom"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/row_item_name"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/row_item_name"
+        app:layout_constraintStart_toEndOf="@+id/row_item_count"
         app:layout_constraintTop_toTopOf="@+id/row_item_name"
         app:layout_constraintWidth_percent="0.2"
         tools:text="Text" />
