--- a/app/src/main/res/layout/sample_dialog_one.xml
+++ b/app/src/main/res/layout/sample_dialog_one.xml
@@ -5,99 +5,41 @@
     android:layout_height="match_parent"
     android:padding="10dp">
 
-    <RelativeLayout
-        android:id="@+id/rl_edit"
-        android:layout_width="match_parent"
+    <EditText
+        android:id="@+id/bottomSheetEditCount"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:padding="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"
+        android:autofillHints="no"
+        android:background="@drawable/edit_text_border"
+        android:hint="Count"
+        android:inputType="numberDecimal"
+        android:imeOptions="actionNext"
+        android:paddingStart="8dp"
+        android:paddingTop="16dp"
+        android:paddingEnd="4dp"
+        android:paddingBottom="16dp"
+        app:layout_constraintEnd_toStartOf="@+id/bottomSheetEditPrice"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.3" />
 
-        <ImageButton
-            android:id="@+id/imgEdit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="6dp"
-            android:background="@android:color/transparent"
-            android:src="@android:drawable/ic_media_play" />
-        <!--            android:src="@drawable/ic_baseline_edit_24" />-->
-
-        <TextView
-            android:id="@+id/tv_edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="6dp"
-            android:layout_toRightOf="@+id/imgEdit"
-            android:text="Edit" />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/rl_delete"
-        android:layout_width="match_parent"
+    <EditText
+        android:id="@+id/bottomSheetEditPrice"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:padding="8dp"
-        app:layout_constraintEnd_toEndOf="@+id/rl_edit"
-        app:layout_constraintStart_toStartOf="@+id/rl_edit"
-        app:layout_constraintTop_toBottomOf="@+id/rl_edit">
-
-
-        <ImageButton
-            android:id="@+id/imgDelete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="6dp"
-            android:background="@android:color/transparent"
-            android:src="@android:drawable/ic_delete" />
-        <!--            android:src="@drawable/ic_baseline_delete_forever_24" />-->
-
-        <TextView
-            android:id="@+id/tv_delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="6dp"
-            android:layout_toRightOf="@+id/imgDelete"
-            android:text="Delete" />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/rl_add"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:padding="8dp"
-        app:layout_constraintEnd_toEndOf="@+id/rl_delete"
-        app:layout_constraintStart_toStartOf="@+id/rl_delete"
-        app:layout_constraintTop_toBottomOf="@+id/rl_delete">
-
-        <ImageButton
-            android:id="@+id/imgAdd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="6dp"
-            android:background="@android:color/transparent"
-            android:src="@android:drawable/ic_input_add" />
-
-        <TextView
-            android:id="@+id/tv_add"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="6dp"
-            android:layout_toRightOf="@+id/imgAdd"
-            android:text="Add" />
-
-    </RelativeLayout>
+        android:autofillHints="no"
+        android:background="@drawable/edit_text_border"
+        android:hint="Price"
+        android:inputType="numberDecimal"
+        android:paddingStart="8dp"
+        android:paddingTop="16dp"
+        android:imeOptions="actionDone"
+        android:paddingEnd="4dp"
+        android:paddingBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/bottomSheetEditCount"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/bottomSheetEditCount"
+        app:layout_constraintWidth_percent="0.4" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
