--- a/app/src/main/res/layout/total_adapter_item.xml
+++ b/app/src/main/res/layout/total_adapter_item.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/white"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="16dp"
+    android:background="@color/white">
 
     <View
         android:id="@+id/totalItemDivider1"
@@ -22,6 +23,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="4dp"
         android:gravity="bottom"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/totalItemValue"
         app:layout_constraintHorizontal_bias="1"
@@ -38,6 +40,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:gravity="bottom"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/totalItemTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1"
